# palworld-server-launcher

./: .gitignore  palworld_server_launcher.py  pyproject.toml  setup-pal-server.sh
docs/: gcp_setup.md
templates/: palserver-service-control.pkla.template  palserver.service.template
